# footballLab

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  RECENT_WORK.md  pyproject.toml
config/: settings.yaml
tests/: run_tests.py  test_asgi_app.py  test_backtest.py  test_backtest_data.py  test_club_rating.py  test_competitions.py  test_config.py  test_csl_eval_data.py  test_csl_observation_report.py  test_csl_ops_runner.py  test_csl_pending_gate.py  test_csl_postmatch_runner.py  test_csl_results_probe.py  test_csl_snapshot_archive.py  test_daily_eval.py  test_differ.py  test_elo_local.py  test_elo_replay.py  test_eval_data.py  test_export.py  test_fastapi_app.py  test_finished_record.py  test_http_app.py  test_ingest.py  test_ingest_app.py  test_ingest_server.py  test_league_odds_refresh.py  test_league_runner.py  test_ledger.py  test_line_move_report.py  test_lineup_audit.py  test_lineups_refresh.py  test_local_runner.py  test_match_decision.py  test_notifications.py  test_odds_trend.py  test_oddsportal_wc2022.py  test_ops_check.py  test_ops_daily_report.py  test_pipeline.py  (+23 more)
worldcup/: __init__.py  asgi_app.py  backtest.py  backtest_data.py  club_rating.py  competitions.py  config.py  csl_eval_data.py  csl_observation_report.py  csl_ops_runner.py  csl_pending_gate.py  csl_postmatch_runner.py  csl_results_probe.py  csl_snapshot_archive.py  daily_eval.py  differ.py  elo_local.py  elo_replay.py  eval_data.py  export.py  fastapi_app.py  finished_record.py  http_app.py  ingest.py  ingest_app.py  ingest_server.py  league_odds_refresh.py  league_runner.py  (+39 more)
(+122 files in other folders)
