[project]
name = "worldcup"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
web = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
]
postgres = [
  "psycopg[binary]>=3.2,<4",
]
dev = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
include = ["worldcup*"]
